dz-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-app-deployment
  namespace: otus-dz-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
        - name: otus-app
          image: gubanovss/otus-1:dz-1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 60
            periodSeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
