dz-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-app-service
  namespace: otus-dz-1
spec:
  selector:
    app: otus-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
