dz-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-app-ingress
  namespace: otus-dz-1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: otus-app-service
                port:
                  number: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-app-ingress-students
  namespace: otus-dz-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/students/$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
    - http:
        paths:
          - path: /otusapp/(.*)
            pathType: Prefix
            backend:
              service:
                name: otus-app-service
                port:
                  number: 8000
